Prevent pawn overlap with cell numbers in RightArea

--- a/src/components/board/RightArea.css
+++ b/src/components/board/RightArea.css
@@ -32,7 +32,8 @@
   align-items: center;
   gap: 2px;
   width: 100%;
-  height: 100%;
+  height: 60%; /* Reduce height to leave space for number */
+  margin-top: 5px; /* Add some space between number and pawns */
 }
 
 /* Alternating cell colors */
@@ -65,18 +66,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start; /* Align content to top */
   background-color: white; 
   font-size: min(2vw, 1.5rem);
   font-weight: bold;
   color: #333;
   position: relative;
+  padding-top: 5px; /* Add padding at top for number */
 }
 
 .right-area-cell > span {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
+  /* Remove absolute positioning and let it flow naturally */
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 5px; /* Space between number and pawns */
 }
